# KotohaSnap

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TERMS_OF_USE.md
.claude/: settings.local.json
src/: about.html  index.html  main.js  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  history.rs  image_utils.rs  lib.rs  main.rs  osc.rs  state.rs  watcher.rs
src-tauri/src/translator/: anthropic.rs  custom.rs  google.rs  groq.rs  mod.rs  openai.rs  xai.rs
