[package]
name = "kotoha-snap"
version = "1.0.1"
description = "VRChat screenshot translation app"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"

[lib]
name = "kotoha_snap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
notify = "7"
rosc = "0.10"
dirs = "5"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
